--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 PPROJECT_NAME=base-api
+PROJECT_DESCRIPTION=Base API - This API implements a User registration with full authentication, covering the main user control functionalities.
+PPROJECT_VERSION='1.0.0'
+PROJECT_DOOCUMENTATION=documentation
+PROJECT_PREFIX=api
 PORT=5000
+
 
 DB_HOST=localhost
 DB_PORT=5432
