implementa email de confirmacao de email e recuperacao de senha

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,19 @@ PROJECT_DOOCUMENTATION=documentation
 PROJECT_PREFIX=api
 PORT=5000
 
-
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
 DB_CONTAINER_NAME=postgres
+DB_SYNCHRONIZE=true
 
 SECRET_KEY=secret
 TOKEN_EXPIRATION_TIME=86400
+
+SMTP_SERVER=smtp.mail-server.com
+DEFAULT_MAIL=noreply@mail.com
+MAIL_PASSWORD=password
+
+FRONTEND_URL=http://localhost:3000
