--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "database": "docker-compose up -d && nest start --watch"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
